[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scene/Components/card_control.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Font/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/HUD/ham.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD/heart.png" type="Texture" id=4]
[ext_resource path="res://Script/roaming_control.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/location.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/fight_bg.png" type="Texture" id=8]
[ext_resource path="res://Assets/Theme/pixel_art_text_stats.tres" type="Theme" id=10]
[ext_resource path="res://Assets/HUD/birthstone_beryl_01.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/bag.png" type="Texture" id=12]
[ext_resource path="res://Scene/Components/inventory.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scene/Components/setting_back.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[node name="roaming_control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="setting_back" parent="." instance=ExtResource( 14 )]

[node name="texture_loc" type="NinePatchRect" parent="."]
anchor_right = 1.0
margin_top = 66.0
margin_bottom = 97.0
texture = ExtResource( 7 )

[node name="location" type="RichTextLabel" parent="texture_loc"]
anchor_right = 1.0
margin_left = 18.0
margin_top = 1.0
margin_right = -18.0
margin_bottom = 28.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Lorem Ipsum is simply dummy[/center]"
text = "Lorem Ipsum is simply dummy"
fit_content_height = true

[node name="card_control" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -130.0
margin_right = 169.0
margin_bottom = 208.0

[node name="stat_bg" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -118.0
margin_top = -162.0
margin_right = 118.0
margin_bottom = -76.0
texture = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="stat_bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -15.0
margin_right = 102.0
margin_bottom = 17.0
alignment = 1

[node name="life" type="TextureRect" parent="stat_bg/HBoxContainer"]
margin_left = 7.0
margin_right = 39.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="life_point" type="Label" parent="stat_bg/HBoxContainer/life"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -14.0
theme = ExtResource( 10 )
text = "99"
align = 1
valign = 2

[node name="VSeparator" type="VSeparator" parent="stat_bg/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 43.0
margin_right = 53.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 15 )

[node name="food" type="TextureButton" parent="stat_bg/HBoxContainer"]
margin_left = 57.0
margin_right = 89.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
stretch_mode = 3

[node name="food_point" type="Label" parent="stat_bg/HBoxContainer/food"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -14.0
theme = ExtResource( 10 )
text = "10"
align = 1
valign = 2

[node name="VSeparator2" type="VSeparator" parent="stat_bg/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 93.0
margin_right = 103.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 15 )

[node name="money" type="TextureRect" parent="stat_bg/HBoxContainer"]
margin_left = 107.0
margin_right = 139.0
margin_bottom = 32.0
texture = ExtResource( 11 )

[node name="money_point" type="Label" parent="stat_bg/HBoxContainer/money"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -14.0
theme = ExtResource( 10 )
text = "99"

[node name="VSeparator3" type="VSeparator" parent="stat_bg/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 143.0
margin_right = 153.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 15 )

[node name="bag" type="TextureButton" parent="stat_bg/HBoxContainer"]
margin_left = 157.0
margin_right = 189.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 12 )

[node name="bag" parent="." instance=ExtResource( 13 )]
visible = false

[connection signal="choice_made" from="card_control" to="." method="_on_card_control_choice_made"]
[connection signal="pressed" from="stat_bg/HBoxContainer/food" to="." method="_on_food_pressed"]
[connection signal="pressed" from="stat_bg/HBoxContainer/bag" to="." method="_on_bag_pressed"]
